# Pi-approcximation-alogrithms

./: CMakeLists.txt  README.md  main.cpp
include/: GaussLegendreAlgorithm.h  MachinsFormulaPiApproximation.h  MonteCarloApproximation.h  PiApproximationAlgorithm.h
resources/: digitsOfPi.txt
src/: GaussLegendreAlgorithm.cpp  MachinsFormulaPiApproximation.cpp  MonteCarloApproximation.cpp  PiApproximationAlgorithm.cpp
